--- a/aws/aws-iam.example.cfg
+++ b/aws/aws-iam.example.cfg
@@ -1,4 +1,4 @@
 # Configuration file for IAM layer.
 
 # The account ID for the root AWS account.
-RootAWSAccountID=
+RootAWSAccountID=SOME_ROOT_AWS_ACCOUNT_ID
