--- a/aws/aws-iam.yaml
+++ b/aws/aws-iam.yaml
@@ -19,13 +19,10 @@ Resources:
             AssumeRolePolicyDocument:
                 Version: '2012-10-17'
                 Statement:
-                    - Effect: Allow
-                      Principal:
-                        Service:
-                            - ec2.amazonaws.com
-                      Action:
-                        - 'sts:AssumeRole'
-            Description: Temporarily elevates IAM user to admin-level privileges
+                    Effect: Allow
+                    NotAction: "iam:*"
+                    Resource: "*"
+            Description: Temporarily elevates IAM user to admin-level privileges, except to change IAM permissions
             MaxSessionDuration: 3600
             RoleName: tinydevcrm-admin
     # AdminGroup:
