--- a/aws/aws-iam.yaml
+++ b/aws/aws-iam.yaml
@@ -8,16 +8,6 @@ Parameters:
         Description: Root AWS account ID
 
 Resources:
-    # AdminUser:
-    #     Type: AWS::IAM::User
-    #     Groups:
-    #     LoginProfile:
-    #     ManagedPolicyArns:
-    #     Path:
-    #     PermissionsBoundary:
-    #     Policies:
-    #     Tags:
-    #     UserName:
     AdminRole:
         Type: AWS::IAM::Role
         Properties:
@@ -82,6 +72,27 @@ Resources:
                         - iam:ListAccessKeys
                       Resource:
                         - !Sub arn:aws:iam::${RootAWSAccountID}:user/${!aws:username}
+                    - Sid: AllowIndividualUserToListTheirMFA
+                      Effect: Allow
+                      Action:
+                        - iam:ListVirtualMFADevices
+                        - iam:ListMFADevices
+                      Resource:
+                        - !Sub arn:aws:iam::${RootAWSAccountID}:mfa/*
+                        - !Sub arn:aws:iam::${RootAWSAccountID}:user/${!aws:username}
+                    - Sid: AllowIndividualUserToManageTheirMFA
+                      Effect: Allow
+                      Action:
+                        - iam:CreateVirtualMFADevice
+                        - iam:EnableMFADevice
+                        - iam:ResyncMFADevice
+                      Resource:
+                        - !Sub arn:aws:iam::${RootAWSAccountID}:mfa/${!aws:username}
+                        - !Sub arn:aws:iam::${RootAWSAccountID}:user/${!aws:username}
+                    # - Sid: DenyEverythingExceptForBelowUnlessMFAd
+                    #   Effect: Deny
+                    #   NotAction:
+                    #     - iamListViru
 
     # AdminGroup:
     #     Type: AWS::IAM::Group
