Update aws-secrets.yaml format using cfn-format --write aws-secrets.yaml.

--- a/aws/aws-secrets.yaml
+++ b/aws/aws-secrets.yaml
@@ -1,19 +1,19 @@
-AWSTemplateFormatVersion: '2010-09-09'
+AWSTemplateFormatVersion: "2010-09-09"
 
 Description: Secrets management layer for TinyDevCRM
 
 Resources:
-    KMSKey:
-        Type: AWS::KMS::Key
-        Properties:
-            Description: Customer master key for AWS Secrets Management Service
-            Enabled: true
-            EnableKeyRotation: true
-            KeyPolicy:
-                - Sid: tinydevcrm-kms-policy
-                  Effect: Allow
-                  Principal:
-                    AWS: !Sub arn:aws:iam::${AWS::AccountId}:root
-                  Action:
-                    - kms:*
-                  Resource: '*'
+  KMSKey:
+    Type: "AWS::KMS::Key"
+    Properties:
+      Description: Customer master key for AWS Secrets Management Service
+      EnableKeyRotation: true
+      Enabled: true
+      KeyPolicy:
+        - Action:
+            - "kms:*"
+          Effect: Allow
+          Principal:
+            AWS: !Sub "arn:aws:iam::${AWS::AccountId}:root"
+          Resource: "*"
+          Sid: tinydevcrm-kms-policy
