Update aws-secrets.yaml working secrets management.

--- a/aws/aws-secrets.yaml
+++ b/aws/aws-secrets.yaml
@@ -10,10 +10,13 @@ Resources:
       EnableKeyRotation: true
       Enabled: true
       KeyPolicy:
+        Version: '2012-10-17'
+        Id: tinydevcrm-kms-policy
+        Statement:
         - Action:
             - "kms:*"
           Effect: Allow
           Principal:
             AWS: !Sub "arn:aws:iam::${AWS::AccountId}:root"
           Resource: "*"
-          Sid: tinydevcrm-kms-policy
+          Sid: AllowRootAccountAccessToKey
