Update aws-secrets.yaml create secrets for postgres and django.

--- a/aws/aws-secrets.yaml
+++ b/aws/aws-secrets.yaml
@@ -3,7 +3,7 @@ AWSTemplateFormatVersion: "2010-09-09"
 Description: Secrets management layer for TinyDevCRM
 
 Resources:
-  KMSKey:
+  CustomerMasterKey:
     Type: "AWS::KMS::Key"
     Properties:
       Description: Customer master key for AWS Secrets Management Service
@@ -20,3 +20,31 @@ Resources:
             AWS: !Sub "arn:aws:iam::${AWS::AccountId}:root"
           Resource: "*"
           Sid: AllowRootAccountAccessToKey
+
+  DjangoApplicationSecret:
+    Type: "AWS::SecretsManager::Secret"
+    DependsOn:
+        - CustomerMasterKey
+    Properties:
+        Description: Secret key for Django application managed by AWS Secrets Management Service
+        KmsKeyId: !Ref CustomerMasterKey
+        GenerateSecretString:
+            SecretStringTemplate: '{}'
+            GenerateStringKey: "SECRET_KEY"
+            PasswordLength: 30
+            ExcludeCharacters: '"@/\'
+        Name: tinydevcrm-django-secret-key
+
+  PostgreSQLDatabaseSecret:
+    Type: "AWS::SecretsManager::Secret"
+    DependsOn:
+        - CustomerMasterKey
+    Properties:
+        Description: Secret key for PostgreSQL database managed by AWS Secrets Management Service
+        KmsKeyId: !Ref CustomerMasterKey
+        GenerateSecretString:
+            SecretStringTemplate: '{}'
+            GenerateStringKey: "POSTGRES_PASSWORD"
+            PasswordLength: 30
+            ExcludeCharacters: '"@/\'
+        Name: tinydevcrm-postgresql-password
