Update aws-secrets.yaml run 'cfn-format --write aws-secrets.yaml'.

--- a/aws/aws-secrets.yaml
+++ b/aws/aws-secrets.yaml
@@ -10,41 +10,41 @@ Resources:
       EnableKeyRotation: true
       Enabled: true
       KeyPolicy:
-        Version: '2012-10-17'
         Id: tinydevcrm-kms-policy
         Statement:
-        - Action:
-            - "kms:*"
-          Effect: Allow
-          Principal:
-            AWS: !Sub "arn:aws:iam::${AWS::AccountId}:root"
-          Resource: "*"
-          Sid: AllowRootAccountAccessToKey
+          - Sid: AllowRootAccountAccessToKey
+            Effect: Allow
+            Principal:
+              AWS: !Sub "arn:aws:iam::${AWS::AccountId}:root"
+            Action:
+              - "kms:*"
+            Resource: "*"
+        Version: "2012-10-17"
 
   DjangoApplicationSecret:
     Type: "AWS::SecretsManager::Secret"
     DependsOn:
-        - CustomerMasterKey
+      - CustomerMasterKey
     Properties:
-        Description: Secret key for Django application managed by AWS Secrets Management Service
-        KmsKeyId: !Ref CustomerMasterKey
-        GenerateSecretString:
-            SecretStringTemplate: '{}'
-            GenerateStringKey: "SECRET_KEY"
-            PasswordLength: 30
-            ExcludeCharacters: '"@/\'
-        Name: tinydevcrm-django-secret-key
+      Description: Secret key for Django application managed by AWS Secrets Management Service
+      GenerateSecretString:
+        ExcludeCharacters: "\"@/\\"
+        GenerateStringKey: SECRET_KEY
+        PasswordLength: 30
+        SecretStringTemplate: "{}"
+      KmsKeyId: !Ref CustomerMasterKey
+      Name: tinydevcrm-django-secret-key
 
   PostgreSQLDatabaseSecret:
     Type: "AWS::SecretsManager::Secret"
     DependsOn:
-        - CustomerMasterKey
+      - CustomerMasterKey
     Properties:
-        Description: Secret key for PostgreSQL database managed by AWS Secrets Management Service
-        KmsKeyId: !Ref CustomerMasterKey
-        GenerateSecretString:
-            SecretStringTemplate: '{}'
-            GenerateStringKey: "POSTGRES_PASSWORD"
-            PasswordLength: 30
-            ExcludeCharacters: '"@/\'
-        Name: tinydevcrm-postgresql-password
+      Description: Secret key for PostgreSQL database managed by AWS Secrets Management Service
+      GenerateSecretString:
+        ExcludeCharacters: "\"@/\\"
+        GenerateStringKey: POSTGRES_PASSWORD
+        PasswordLength: 30
+        SecretStringTemplate: "{}"
+      KmsKeyId: !Ref CustomerMasterKey
+      Name: tinydevcrm-postgresql-password
